# FHE-FL

EncryptedTraining/: cnn.py  logistic_regression.py  main.py  prepare_data.py
HEMat/: Activation.py  Aggregator.py  MatrixOperation.py  PolynomialApproximation.py  experiment.py  gradient.py
MKHE/: CMakeLists.txt  ModelProvider.cpp  ModelProvider.h  PublicParameter.cpp  PublicParameter.h  Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  User.h  decryptor_mk.h  encryptor_mk.cpp  encryptor_mk.h  helper.h  linear_transformation.cpp  main.cpp
